# multiple_robots_slam

./: .gitignore  README.md
_old_packages/exploration_programs/: CMakeLists.txt  package.xml.nobuild
_old_packages/map_merging/: CMakeLists.txt
_old_packages/new_exploration_programs/: CMakeLists.txt
_old_packages/topic_sharing/: CMakeLists.txt  package.xml.nobuild
exploration/: CMakeLists.txt  package.xml
exploration/cfg/: custom_rosconsole.config  extra_parameter_reconfigure.cfg  frontier_based_exploration_parameter_reconfigure.cfg  movement_parameter_reconfigure.cfg  multi_exploration_simulator.cfg  seamless_hybrid_exploration_parameter_reconfigure.cfg  sensor_based_exploration_parameter_reconfigure.cfg
exploration/costmap_to_voronoi/: CMakeLists.txt  README.md  package.xml
exploration/exploration/: CMakeLists.txt  package.xml
exploration/exploration_msgs/: CMakeLists.txt  package.xml
exploration/fig/: edit_map.pgm
exploration/launch/: frontier_based_exploration.launch  legacy_hybrid_exploration.launch  movement_test.launch  multi_exploration_simulator.launch  rotation.launch  rrt_exploration.launch  seamless_hybrid_exploration.launch  seamless_hybrid_exploration_actively_frontier.launch  sensor_based_exploration.launch  teleop.launch  temp_frontier.launch  vfh_test.launch
exploration/msg/: MoveAngle.msg
exploration/param/: fbe_last_parameters.yaml  movement_fbe_last_parameters.yaml  movement_params.yaml  movement_planner_params.yaml  movement_she_last_parameters.yaml  path2vec_params.yaml  path_planner_params.yaml  seamless_planner_params.yaml  seamsim_goal_planner_params.yaml  she_last_parameters.yaml  simulator_calc_path_planner_params.yaml  simulator_calc_planner_params.yaml  simulator_last_extra_parameters.yaml  simulator_last_parameters.yaml
exploration/sensor_based/: CMakeLists.txt  package.xml
exploration/sensor_based_exploration/: CMakeLists.txt  package.xml
exploration/src/: extra_parameter_reconfigure.cpp  fbe_main.cpp  frontier_based_exploration.cpp  frontier_based_exploration_node.cpp  legacy_hybrid_exploration.cpp  legacy_hybrid_exploration_node.cpp  movement.cpp  movement_parameter_reconfigure.cpp  movement_test.cpp  multi_exploration_simulator.cpp  multi_exploration_simulator_input_support.cpp  multi_exploration_simulator_node.cpp  multi_exploration_simurator.cpp  pose_log_publisher.cpp  rotation_node.cpp  rrt_point_publisher_node.cpp  sbe_main.cpp  seamless_hybrid_exploration.cpp  seamless_hybrid_exploration_actively_frontier_node.cpp  seamless_hybrid_exploration_node.cpp  sensor_based_exploration.cpp  sensor_based_exploration_node.cpp  simulator_input_support.cpp  vfh_test.cpp
exploration_libraly/: CMakeLists.txt  package.xml
exploration_libraly/src/: construct.cpp  convert.cpp  enum.cpp  path_planning.cpp  struct.cpp  utility.cpp
exploration_msgs/: CMakeLists.txt  package.xml
exploration_msgs/msg/: AvoidanceStatus.msg  Branch.msg  BranchArray.msg  Frontier.msg  FrontierArray.msg  PoseStampedArray.msg  RobotInfo.msg  RobotInfoArray.msg
exploration_programs/: CMakeLists.txt
exploration_programs/launch/: frontier_based_exploration.launch  hybrid_exploration.launch~  sensor_based_exploration.launch
exploration_support/: CMakeLists.txt  package.xml
github_packages/: README.md
lab_turtlebot_description/: CMakeLists.txt  package.xml
laser_merge/: CMakeLists.txt  package.xml
map_merge/: CMakeLists.txt  README.md  package.xml
map_merging/: CMakeLists.txt  package.xml
multi_turtlebot_bringup/: CMakeLists.txt  package.xml
multi_turtlebot_bringup/launch/: turtlebot.launch
multi_turtlebot_bringup/launch/includes/: description.launch.xml  kinect.launch.xml  mobile_base.launch.xml  robot.launch.xml  urg.launch.xml
multi_turtlebot_gazebo/: CMakeLists.txt  package.xml
multi_turtlebot_launch/: CMakeLists.txt  README.md  package.xml
multi_turtlebot_mapping/: CMakeLists.txt  package.xml
multiple_robots_slam/: CMakeLists.txt  package.xml
new_exploration_programs/: CMakeLists.txt  package.xml
new_exploration_programs/include/new_exploration_programs/: avoidance_process.h  basic_process.h  centroid_matching.h  feature_matching.h  frontier_map_process.h  frontier_moving_process.h  processing_pointcloud.h
new_exploration_programs/launch/: create_localmap_system.launch  frontier_based_exploration.launch
new_exploration_programs/msg/: f_vector.msg  index.msg  segmented_cloud.msg  twoPointcloud2.msg
new_exploration_programs/src/avoidance_process/: avoidance_process.cpp  avoidance_process_function.cpp
new_exploration_programs/src/duplicate_process/: duplicate_process.cpp  duplicate_process_function.cpp  main.cpp
new_exploration_programs/src/frontier_map_process/: frontier_map_process_function.cpp
new_exploration_programs/src/frontier_moving_process/: frontier_moving_process_function.cpp
new_exploration_programs/src/main/: frontier-based_exploration_main.cpp  hybrid_exploration_main.cpp
new_exploration_programs/src/sub_process/: odom_marker.cpp  odom_support.cpp  odometry_on_map.cpp  only_new_sensor_based_exploration.cpp  only_new_vector_explore_program.cpp
new_exploration_programs/src/test_code/: analysis_point_cloud.cpp  centroid_matching.cpp  centroid_matching_func.cpp  feature_matching.cpp  feature_matching_func.cpp  feature_matching_main.cpp  localmap_publisher.cpp  matching_rtabSourceMaster.cpp  merging_sourceAndMaster.cpp  pointcloud_test.cpp  processing_merged_pointcloud.cpp  processing_pointcloud.cpp  processing_pointcloud_func.cpp  processing_rtab_masterMap.cpp  processing_rtab_source.cpp  processing_source_pointcloud.cpp  scan_matching.cpp  shot_feature_test.cpp
new_exploration_programs/src/test_code/old_files/: centroid_matching.cpp.old  feature_matching.cpp.old  feature_matching_func.cpp.old  processing_source_pointcloud.cpp.old
new_exploration_programs/src/test_code/old_files6_5/: centroid_matching.cpp  processing_merged_pointcloud.cpp  processing_pointcloud_func.cpp
roscore_communication/: CMakeLists.txt  README.md  package.xml
sub_tools/: CMakeLists.txt  package.xml
(+725 files in other folders)
