<?xml version="1.0"?>
<package format="2">
  <name>multi_turtlebot_bringup</name>
  <version>0.0.0</version>
  <description>The multi_turtlebot_bringup package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rosdesk@todo.todo">rosdesk</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/multi_turtlebot_bringup</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_aggregator</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>kobuki_node</build_depend>
  <build_depend>turtlebot_bringup</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>lab_turtlebot_description</build_depend>
  <build_depend>freenect_launch</build_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>laser_merge</build_depend>
  <build_export_depend>diagnostic_aggregator</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>kobuki_node</build_export_depend>
  <build_export_depend>turtlebot_bringup</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>lab_turtlebot_description</build_export_depend>
  <build_export_depend>freenect_launch</build_export_depend>
  <build_export_depend>urg_node</build_export_depend>
  <build_export_depend>laser_merge</build_export_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>turtlebot_bringup</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>lab_turtlebot_description</exec_depend>
  <exec_depend>freenect_launch</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>laser_merge</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
